<resources>
    <string name="app_name">跑先体育</string>


    <string name="bottom_main">首页</string>
    <string name="bottom_quizzes">竞猜</string>
    <string name="bottom_live">直播</string>
    <string name="bottom_discover">发现</string>
    <string name="bottom_mine">我的</string>

    <string name="system_permission_limit">系统权限受限</string>
    <string name="double_click_exit">再按一次退出应用</string>

    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>
</resources>
