<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:checked="true"
        android:icon="@drawable/main_tab_home"
        android:title="@string/bottom_main" />
    <item
        android:id="@+id/navigation_quizzes"
        android:icon="@drawable/main_tab_quizzes"
        android:title="@string/bottom_quizzes" />

    <item
        android:id="@+id/navigation_live"
        android:icon="@drawable/main_tab_live"
        android:title="@string/bottom_live" />
    <item
        android:id="@+id/navigation_discover"
        android:icon="@drawable/main_tab_discover"
        android:title="@string/bottom_discover" />
    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/main_tab_mine"
        android:title="@string/bottom_mine" />
</menu>